--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app..</noscript>
     <%= stylesheet_pack_tag 'index' %>
     <%= javascript_pack_tag 'application' %>
   </body>
