--- a/app/javascript/assets/scss/config.scss
+++ b/app/javascript/assets/scss/config.scss
@@ -66,3 +66,33 @@ h1, h2, h3, h4, h5 {
   @include headline
 }
 
+// usefull classes
+
+.bg-dark {
+  background-color: $grayLight;
+}
+
+.bg-white {
+  background-color: white;
+}
+
+.bg-blue {
+  background-color: $blueLight;
+}
+
+.bg-gray {
+  background-color: #F3F4F6;
+}
+
+.container {
+  background-size: 100% 100%;
+  height: 100vh;
+}
+
+.row {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 300px;
+  max-width: 600px;
+}
