--- a/app/javascript/assets/scss/style.scss
+++ b/app/javascript/assets/scss/style.scss
@@ -1,3 +1,5 @@
+/* stylelint-disable no-descending-specificity */
+
 @import './config.scss';
 
 @mixin formField {
@@ -278,57 +280,25 @@
   font-weight: bold;
   font-size: 1.5rem !important;
 }
-<<<<<<< HEAD
-<<<<<<< HEAD
 
-=======
->>>>>>> develop
-=======
-
->>>>>>> develop
 .measurement-right-menu {
   display: flex;
   align-items: center !important;
   margin-left: auto;
   color: $grayDark !important;
-<<<<<<< HEAD
-<<<<<<< HEAD
 
   span:nth-child(1) {
-=======
-  span:nth-child(1){
->>>>>>> develop
-=======
-
-  span:nth-child(1) {
->>>>>>> develop
-    font-family: 'Helvetica Neue Bold' !important;
+    font-family: Helvetica, Arial, Verdana, Tahoma, sans-serif;
     font-weight: bold;
     font-size: 1.3rem;
   }
-<<<<<<< HEAD
-<<<<<<< HEAD
 
   span:nth-child(2) {
-=======
-  span:nth-child(2){
->>>>>>> develop
-=======
-
-  span:nth-child(2) {
->>>>>>> develop
     margin-left: 5px;
     color: $grayLight !important;
     font-size: 0.7rem;
   }
-<<<<<<< HEAD
-<<<<<<< HEAD
 
-=======
->>>>>>> develop
-=======
-
->>>>>>> develop
   a {
     margin-left: 5px;
     color: $grayDark;
@@ -336,23 +306,12 @@
     font-size: 1.5rem;
   }
 }
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> develop
 
 .measurements-title {
   margin: 8px;
 
-<<<<<<< HEAD
-=======
-.measurements-title {
-  margin: 8px;
->>>>>>> develop
-=======
->>>>>>> develop
   span {
-    font-family: 'Helvetica Neue Bold' !important;
+    font-family: Helvetica, Arial, Verdana, Tahoma, sans-serif;
     font-weight: bold;
     font-size: 0.8rem;
     color: $grayLight !important;
@@ -364,14 +323,7 @@
   position: absolute;
   right: 10px;
   bottom: 10px;
-<<<<<<< HEAD
-<<<<<<< HEAD
 
-=======
->>>>>>> develop
-=======
-
->>>>>>> develop
   a {
     color: white;
   }
@@ -383,69 +335,30 @@
 
 .new-measure {
   height: 80vh;
-<<<<<<< HEAD
-<<<<<<< HEAD
 
   select {
     @include inputStyle;
   }
 
-=======
-  select {
-    @include inputStyle;
-  }
->>>>>>> develop
-=======
-
-  select {
-    @include inputStyle;
-  }
-
->>>>>>> develop
   .measure-date {
     padding-top: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-<<<<<<< HEAD
-<<<<<<< HEAD
 
-=======
->>>>>>> develop
-=======
-
->>>>>>> develop
     input {
       @include inputStyle;
     }
   }
-<<<<<<< HEAD
-<<<<<<< HEAD
 
   .circle {
     padding: 10px;
-=======
-  .circle {
-    padding:10px;
->>>>>>> develop
-=======
-
-  .circle {
-    padding: 10px;
->>>>>>> develop
     font-size: 5rem;
     display: flex;
     justify-content: center;
   }
-<<<<<<< HEAD
-<<<<<<< HEAD
 
-=======
->>>>>>> develop
-=======
-
->>>>>>> develop
   .buttons {
     display: flex;
     justify-content: space-around;
@@ -461,30 +374,12 @@
 
 .button-red {
   @include button_c;
-<<<<<<< HEAD
-<<<<<<< HEAD
 
-=======
->>>>>>> develop
-=======
-
->>>>>>> develop
   background-color: #fc2c03;
 }
 
 .button-green {
   @include button_c;
-<<<<<<< HEAD
-<<<<<<< HEAD
 
   background-color: $greenDark;
 }
-=======
-  background-color: $greenDark;
-}
->>>>>>> develop
-=======
-
-  background-color: $greenDark;
-}
->>>>>>> develop
